@@ -8,6 +8,7 @@
 - Sort albums by artist, then year, then title [Teemu Tervo]
 - Improved error handling [Jorn Baayen]
 - Keep covers when files from removable media are removed [Jorn Baayen]
+- GConf key for using a different amazon variant [Lee Willis]
 - Various other fixes [Kenneth Christiansen, Lee Willis, Crispin Flowerday,
                        Jorn Baayen]
 
