@@ -1,3 +1,10 @@
+2004-04-25  Lee Willis  <lee@leewillis.co.uk>
+
+	* data/muine.schemas.in:
+	* src/CoverDatabase.cs:
+
+	Add a GConf key for using different amazon backends.
+
 2004-04-25  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* src/CoverDatabase.cs:
